@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2022 Ignite Realtime Foundation. All rights reserved.
+ * Copyright (C) 2022-2023 Ignite Realtime Foundation. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,10 +28,7 @@ import org.jivesoftware.util.cache.CacheFactory;
 import org.xmpp.packet.JID;
 
 import java.lang.reflect.Field;
-import java.sql.SQLException;
 import java.util.*;
-
-import static org.junit.Assert.assertThrows;
 
 /**
  * Unit tests that verify the functionality of {@link AbstractGroupProvider} methods not overridden by the
@@ -51,6 +48,7 @@ public class AbstractGroupProviderTest extends DBTestCase {
 
     static {
         final java.net.URL location = AbstractGroupProvider.class.getResource("/datasets/openfire.script");
+        assert location != null;
         final String fileLocation = location.toString().substring(0, location.toString().lastIndexOf("/")+1) + "openfire";
         URL = "jdbc:hsqldb:"+fileLocation+";ifexists=true";
 
@@ -1318,7 +1316,7 @@ public class AbstractGroupProviderTest extends DBTestCase {
      */
     public void testHasSharedGroupsReturnsTrueWhenOneIsSharedWithTheSameWithTheSameGroup() throws Exception {
         final DefaultGroupProvider provider = new DefaultGroupProvider();
-        provider.createGroup("Test Group A").shareWithUsersInSameGroup("Users in group A");;
+        provider.createGroup("Test Group A").shareWithUsersInSameGroup("Users in group A");
         provider.createGroup("Test Group B");
         assertTrue(provider.hasSharedGroups());
     }
@@ -1329,8 +1327,8 @@ public class AbstractGroupProviderTest extends DBTestCase {
      */
     public void testHasSharedGroupsReturnsTrueWhenAllAreSharedWithTheSameWithTheSameGroup() throws Exception {
         final DefaultGroupProvider provider = new DefaultGroupProvider();
-        provider.createGroup("Test Group A").shareWithUsersInSameGroup("Users in group A");;
-        provider.createGroup("Test Group B").shareWithUsersInSameGroup("Users in group B");;;
+        provider.createGroup("Test Group A").shareWithUsersInSameGroup("Users in group A");
+        provider.createGroup("Test Group B").shareWithUsersInSameGroup("Users in group B");
         assertTrue(provider.hasSharedGroups());
     }
 
@@ -1352,7 +1350,7 @@ public class AbstractGroupProviderTest extends DBTestCase {
     public void testHasSharedGroupsReturnsTrueWhenOneIsSharedWithTheOther() throws Exception {
         final DefaultGroupProvider provider = new DefaultGroupProvider();
         provider.createGroup("Test Group A");
-        provider.createGroup("Test Group B").shareWithUsersInGroups(Arrays.asList("Test Group A"),"Users in Group A");
+        provider.createGroup("Test Group B").shareWithUsersInGroups(List.of("Test Group A"),"Users in Group A");
         assertTrue(provider.hasSharedGroups());
     }
 
@@ -1363,7 +1361,7 @@ public class AbstractGroupProviderTest extends DBTestCase {
     public void testHasSharedGroupsReturnsTrueWhenOneIsSharedWithNonExistent() throws Exception {
         final DefaultGroupProvider provider = new DefaultGroupProvider();
         provider.createGroup("Test Group A");
-        provider.createGroup("Test Group B").shareWithUsersInGroups(Arrays.asList("Non-existent Group"),"Non-existent Group");
+        provider.createGroup("Test Group B").shareWithUsersInGroups(List.of("Non-existent Group"),"Non-existent Group");
         assertTrue(provider.hasSharedGroups());
     }
 
@@ -1374,7 +1372,7 @@ public class AbstractGroupProviderTest extends DBTestCase {
     public void testHasSharedGroupsReturnsTrueWhenOneIsSharedWithNonExistentByWayOfDeletion() throws Exception {
         final DefaultGroupProvider provider = new DefaultGroupProvider();
         provider.createGroup("Test Group A");
-        provider.createGroup("Test Group B").shareWithUsersInGroups(Arrays.asList("Test Group A"),"Users in Group A");
+        provider.createGroup("Test Group B").shareWithUsersInGroups(List.of("Test Group A"),"Users in Group A");
         provider.deleteGroup("Test Group A");
         assertTrue(provider.hasSharedGroups());
     }
@@ -1512,8 +1510,8 @@ public class AbstractGroupProviderTest extends DBTestCase {
 
     public void testLoadPropertiesReturnsNoPropertiesForNonExistentGroup() throws Exception {
         final DefaultGroupProvider provider = new DefaultGroupProvider();
-        Group a = provider.createGroup("Test Group A");
-        Group newGroup = new Group("New", "New Description", new ArrayList(), new ArrayList());
+        provider.createGroup("Test Group A");
+        Group newGroup = new Group("New", "New Description", new ArrayList<>(), new ArrayList<>());
         PersistableMap<String,String> result =  provider.loadProperties(newGroup);
         assertEquals(0, result.size());
     }
