@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2019-2022 Ignite Realtime Foundation. All rights reserved.
+ * Copyright (C) 2019-2023 Ignite Realtime Foundation. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,24 +12,24 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */package org.jivesoftware.util;
+ */
+package org.jivesoftware.util;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 
-import org.junit.Before;
-import org.junit.Test;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class StringUtilsTest {
     
-    @Before
+    @BeforeEach
     public void setUp() {
         JiveGlobals.setLocale(Locale.ENGLISH);
     }
@@ -60,7 +60,7 @@ public class StringUtilsTest {
     }
 
     private void assertValidDomainName(String domain, String expected) {
-        assertEquals("Domain should be valid: " + domain, expected, StringUtils.validateDomainName(domain));
+        assertEquals(expected, StringUtils.validateDomainName(domain), "Domain should be valid: " + domain);
     }
 
     private void assertInvalidDomainName(String domain, String expectedCause) {
@@ -127,33 +127,33 @@ public class StringUtilsTest {
 
     @Test
     public void doubleQuotes() {
-        assertEquals(Arrays.asList("hello world"), StringUtils.shellSplit("\"hello world\""));
+        assertEquals(List.of("hello world"), StringUtils.shellSplit("\"hello world\""));
     }
 
     @Test
     public void singleQuotes() {
-        assertEquals(Arrays.asList("hello world"), StringUtils.shellSplit("'hello world'"));
+        assertEquals(List.of("hello world"), StringUtils.shellSplit("'hello world'"));
     }
 
 
     @Test
     public void escapedDoubleQuotes() {
-        assertEquals(Arrays.asList("\"hello world\""), StringUtils.shellSplit("\"\\\"hello world\\\""));
+        assertEquals(List.of("\"hello world\""), StringUtils.shellSplit("\"\\\"hello world\\\""));
     }
 
     @Test
     public void noEscapeWithinSingleQuotes() {
-        assertEquals(Arrays.asList("hello \\\" world"), StringUtils.shellSplit("'hello \\\" world'"));
+        assertEquals(List.of("hello \\\" world"), StringUtils.shellSplit("'hello \\\" world'"));
     }
 
     @Test
     public void backToBackQuotedStringsShouldFormSingleToken() {
-        assertEquals(Arrays.asList("foobarbaz"), StringUtils.shellSplit("\"foo\"'bar'baz"));
-        assertEquals(Arrays.asList("three four"), StringUtils.shellSplit("\"three\"' 'four"));
+        assertEquals(List.of("foobarbaz"), StringUtils.shellSplit("\"foo\"'bar'baz"));
+        assertEquals(List.of("three four"), StringUtils.shellSplit("\"three\"' 'four"));
     }
 
     @Test
     public void escapedSpacesDoNotBreakUpTokens() {
-        assertEquals(Arrays.asList("three four"), StringUtils.shellSplit("three\\ four"));
+        assertEquals(List.of("three four"), StringUtils.shellSplit("three\\ four"));
     }
 }
