@@ -1,11 +1,27 @@
+/*
+ * Copyright (C) 2023 Ignite Realtime Foundation. All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.jivesoftware.util.cache;
 
 import org.jivesoftware.openfire.cluster.NodeID;
-import org.junit.Test;
-import static org.junit.Assert.*;
+import org.junit.jupiter.api.Test;
 
 import java.util.*;
 import java.util.function.Function;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ReverseLookupComputingCacheEntryListenerTest {
 
@@ -46,8 +62,8 @@ public class ReverseLookupComputingCacheEntryListenerTest {
         final NodeID clusterNodeB = NodeID.getInstance(UUID.randomUUID().toString().getBytes());
 
         // Execute system under test.
-        listener.entryAdded("somekey", new HashSet<>(Arrays.asList(clusterNodeA)), clusterNodeA);
-        listener.entryUpdated("somekey", new HashSet<>(Arrays.asList(clusterNodeA)), new HashSet<>(Arrays.asList(clusterNodeA, clusterNodeB)), clusterNodeB );
+        listener.entryAdded("somekey", new HashSet<>(List.of(clusterNodeA)), clusterNodeA);
+        listener.entryUpdated("somekey", new HashSet<>(List.of(clusterNodeA)), new HashSet<>(Arrays.asList(clusterNodeA, clusterNodeB)), clusterNodeB );
 
         // Assert result
         assertTrue(reverseLookupMap.containsKey(clusterNodeA));
@@ -72,8 +88,8 @@ public class ReverseLookupComputingCacheEntryListenerTest {
         final NodeID clusterNodeB = NodeID.getInstance(UUID.randomUUID().toString().getBytes());
 
         // Execute system under test.
-        listener.entryUpdated("somekey", new HashSet<>(Arrays.asList(clusterNodeA)), new HashSet<>(Arrays.asList(clusterNodeA, clusterNodeB)), clusterNodeB);
-        listener.entryAdded("somekey", new HashSet<>(Arrays.asList(clusterNodeA)), clusterNodeA);
+        listener.entryUpdated("somekey", new HashSet<>(List.of(clusterNodeA)), new HashSet<>(Arrays.asList(clusterNodeA, clusterNodeB)), clusterNodeB);
+        listener.entryAdded("somekey", new HashSet<>(List.of(clusterNodeA)), clusterNodeA);
 
         // Assert result
         assertTrue(reverseLookupMap.containsKey(clusterNodeA));
